splash screen and icons release

--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,25 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
-    <!--
-      manifest.json provides metadata used when your web app is added to the
-      homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-      
+      <link rel="manifest" href="%PUBLIC_URL%/manifest.v1.73.json">
+      <meta name="apple-mobile-web-app-capable" content="yes">
+      <!--<meta name="mobile-web-app-capable" content="yes">
+        manifest.json provides metadata used when your web app is added to the
+        homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
+      -->
+      <link rel="apple-touch-icon" href="/images/icons/icon-192x192.png">
+      <link rel="apple-touch-icon" sizes="152x152" href="/images/icons/icon-152x152.png">
+      <link rel="apple-touch-icon" sizes="180x180" href="/images/icons/icon-192x192.png">
+      <link rel="apple-touch-icon" sizes="167x167" href="/images/icons/icon-192x192.png">
+
+
+      <link href="/images/splashscreens/iphone5_splash.png" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
+      <link href="/images/splashscreens/iphone6_splash.png" media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
+      <link href="/images/splashscreens/iphoneplus_splash.png" media="(device-width: 621px) and (device-height: 1104px) and (-webkit-device-pixel-ratio: 3)" rel="apple-touch-startup-image" />
+      <link href="/images/splashscreens/iphonex_splash.png" media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3)" rel="apple-touch-startup-image" />
+      <link href="/images/splashscreens/ipad_splash.png" media="(device-width: 768px) and (device-height: 1024px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
+      <link href="/images/splashscreens/ipadpro1_splash.png" media="(device-width: 834px) and (device-height: 1112px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
+      <link href="/images/splashscreens/ipadpro2_splash.png" media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
     <!--<link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">-->
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -20,7 +33,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Wheres My Peers</title>
+    <title>Where Are My Peers</title>
   </head>
   <body>
     <noscript>
